--- a/src/features/helloWorld/HelloWorld.scss
+++ b/src/features/helloWorld/HelloWorld.scss
@@ -1,19 +1,21 @@
-.App {
+@import "assets/styles/variables";
+
+.HelloWorld {
   text-align: center;
 }
 
-.App-logo {
+.HelloWorld-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .HelloWorld-logo {
+    animation: HelloWorld-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
+.HelloWorld-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -24,11 +26,14 @@
   color: white;
 }
 
-.App-link {
+.HelloWorld-link {
   color: #61dafb;
 }
+code {
+  background-color: #00205f;
+}
 
-@keyframes App-logo-spin {
+@keyframes HelloWorld-logo-spin {
   from {
     transform: rotate(0deg);
   }
